tests/hevm/pass/simple/simple.act
constructor of A
interface constructor()

creates

  mapping (uint=>uint) x := []

behaviour f of A
interface f()

iff

  CALLVALUE == 0

  storage

    x[0] => 1

  returns 1