tests/hevm/fail/simple/simple.act
behaviour constructor of A
interface constructor()

creates

  mapping (uint=>uint) x := []

behaviour f of A
interface f()

storage

  x[0] => 1

returns

  2